[package]
name = "adventofcode2018"
version = "0.1.0"
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
edition = "2018"

[[bin]]
name = "day1-part1"
path = "day1-part1/src/main.rs"

[[bin]]
name = "day1-part2"
path = "day1-part2/src/main.rs"

[[bin]]
name = "day2-part1"
path = "day2-part1/src/main.rs"

[[bin]]
name = "day2-part2"
path = "day2-part2/src/main.rs"
